# task-manager-api

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  PRODUCTION_SETUP.md  Procfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  linting.yml
config/: settings.py  urls.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  README.md  SECURITY.md  TESTING.md
task/: views.py
